# jotbox

./: Cargo.toml  README.md  Rocket.toml
html/: editor.css  jotbox.css  jotbox.html  markdown-editor.js  privacy.html  theme.css
html/js/: cy-data.js  encryption.js  prosemirror.js
src/: datastore.rs  graph.rs  local_embeddings.rs  main.rs  openai.rs
templates/: index.html.hbs  notes.html.hbs
