[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.40"
serde_yaml = { version = "0.9.21" }
rocket = { version = "=0.5.1", features = ["json", "tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
fern = "0.7.1"
log = "0.4.26"
chrono = "0.4.40"
anyhow = "1.0.97"
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
google-oauth = "1"
aes = "0.8.1"
block-modes = "0.8.1"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.22.1"
reqwest = { version = "0.12.15", features = ["json"] }
zerocopy = "0.8.23"
sqlite-vec = "0.1.6"
libsqlite3-sys = "0.26.0"
hmac = "0.12.1"
sha2 = "0.10.8"
dotenvy = "0.15"
